Add global styles

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,25 +3,27 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+    --primary-color: rgb(
+      14,
+      33,
+      160
+    ); /* Primary color for header, nav, and pages */
+
+    --secondary-color: rgb(
+      157,
+      68,
+      192
+    ); /* Hover color for interactive elements like links */
+
+    --border-color: rgb(
+      236,
+      83,
+      176
+    ); /* Color for buttons and interactive elements */
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
+
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  min-height: 100vh;
 }
