--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -35,72 +35,24 @@
     3.8923rem + 1.2308vw,
     5rem
   );
-}
 
-body {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
+  --responsive-planet-section-title-size: clamp(
+    2.2rem,
+    1.9692rem + 0.9231vw,
+    2.8rem
+  );
 
-/* Particles js */
+  --responsive-planet-paragraph-size: clamp(1rem, 0.8462rem + 0.6154vw, 1.4rem);
 
-#tsparticles {
-  background-color: var(--particle-header-color);
-  height: var(--header-height);
-  width: 100%;
-  z-index: 100;
+  --responsive-planet-paragraph-width: clamp(45ch, 50%, 75ch);
 }
 
 /* Navbar adjustments */
-
-.dropdown-item__bg_none {
-  background-color: transparent !important;
+@layer utilities {
+  .navbar-item__color:hover {
+    color: var(--secondary-color) !important;
+  }
+  .dropdown-item__bg_none {
+    background-color: transparent !important;
+  }
 }
-
-.navbar-item__color:hover {
-  color: var(--secondary-color) !important;
-}
-
-/* main */
-.radial-gradient {
-  background: radial-gradient(circle at bottom, navy 0, black 100%);
-}
-
-/* Planets */
-.planet-content {
-  background-image: linear-gradient(
-    to right top,
-    #03031e,
-    #03041d,
-    #03041b,
-    #03051a,
-    #030518,
-    #030519,
-    #04061b,
-    #04061c,
-    #050721,
-    #060725,
-    #06082a,
-    #06082e
-  );
-  display: grid;
-
-  grid-template-columns: 4fr 1fr;
-}
-
-.planets-facts-motion {
-  animation: scale 10s infinite linear;
-}
-
-/* 
-.planet-content p {
-  color: var(--color-light);
-  font-size: clamp(1rem, 0.8462rem + 0.6154vw, 1.4rem);
-  width: clamp(45ch, 50%, 75ch);
-  line-height: 1.7;
-  font-family: 'Lato', sans-serif;
-  margin-bottom: 60px;
-  margin-right: auto;
-  margin-left: auto;
-} */
